# employee_wellbeing_eda

./: README.md  hello.py  lib.txt  pyproject.toml
.virtual_documents/notebooks/: glassdoor_cleaning.ipynb
data/clean/: aggregated_flags_by_year.csv  companies.csv  cons_freq_df.csv  cons_industry_sorted.csv  freq_word_in_reviews.csv  industry_emotions.csv  industry_retention.csv  industry_trends.csv  job_emotions_sorted.csv  job_flag_counts.csv  percentage_emotions_industry.csv  pros_freq_df.csv  reviews_per_year_sample.csv  sentiment_per_industry.csv  sentiment_per_job.csv  top_20_jobs.csv  top_30_companies_by_flags.csv  top_keywords_cons_by_industry.csv  top_keywords_pros_by_industry.csv  yearly_trends_mean_initial_data.csv  yearly_trends_mean_sample.csv
figures/: sentiment_ratings.csv
notebooks/: data_wrangling.ipynb  department_analysis.ipynb  departments_analysis.ipynb  glassdoor_cleaning.ipynb  hypothesis_testing.ipynb  jobs_&_industries.ipynb  well_being_analysis.ipynb  yearly_emotional_trends.ipynb
notebooks/.ipynb_checkpoints/: glassdoor_cleaning-checkpoint.ipynb  osmi_2017-checkpoint.ipynb
