[project]
name = "employee-wellbeing-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "numpy==1.26.0",
    "pandas>=2.0.3",
    "pip>=24.3.1",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "setuptools>=75.6.0",
    "spacy>=3.7.5",
    "textblob>=0.18.0.post0",
    "tqdm>=4.67.1",
    "wheel>=0.45.1",
]
